Add `DELETE /v0/r` API
